--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,9 +1,10 @@
 .card {
+    width: 200px;
     max-height: 200px;
     overflow: hidden;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
