--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,12 @@
 .card {
     width: 200px;
-    max-height: 200px;
+    height: 200px;
     overflow: hidden;
+    padding: 0;
 }
 
 img {
     width: 100%;
     height: 100%;
+    padding: 0;
 }
